# UBLX

./: .gitignore  .mise.toml  .ublx.toml  Cargo.toml  README.md  build.rs
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  design_spike.yml  feature_request.yml
.github/scripts/: commit-and-push-formula.sh
.github/workflows/: ci.yml  release.yml  ublx-web.yml
Formula/: ublx.rb
assets/syntect-themes/: archival-simulacra.tmTheme  asterion-code.tmTheme  babel-blend.tmTheme  barley-bound.tmTheme  burning-glyph.tmTheme  cryptic-chai.tmTheme  faded-echo.tmTheme  frozen-phrase.tmTheme  garden-unseen.tmTheme  golden-delirium.tmTheme  infinite-rose.tmTheme  obdurate-noon.tmTheme  oblivion-ink.tmTheme  ochre-thread.tmTheme  pale-mirror.tmTheme  parched-page.tmTheme  purple-haze.tmTheme  resin-record.tmTheme  shadow-index.tmTheme  silent-sheet.tmTheme  tangerine-memory.tmTheme  verglas-trace.tmTheme
crates/ublx-web/: Cargo.toml  README.md  build.rs  build.sh  index.html  package-lock.json  package.json  styles.css  tailwind.config.js
crates/ublx-web/src/: api.rs  catalog_refresh.rs  embed.rs  focus.rs  help.rs  keys.rs  kv_tables.rs  lib.rs  multiselect.rs  nav.rs  panes.rs  search.rs  shell.rs  sort.rs  theme.rs  toast.rs  util.rs  viewer.rs  viewer_find.rs
crates/ublx-web/src/api/: catalog.rs  content.rs  delta.rs  entries.rs  format.rs  fs.rs  http.rs  mod.rs  roots.rs  settings.rs
crates/ublx-web/src/command_mode/: actions.rs  ctx.rs  helpers.rs  mod.rs  rows.rs  view.rs
crates/ublx-web/src/modes/: delta.rs  duplicates.rs  lenses.rs  mod.rs  settings.rs  snapshot.rs
crates/ublx-web/src/panes/: mod.rs  panel.rs  status.rs
crates/ublx-web/src/space_menu/: ctx.rs  helpers.rs  kinds.rs  mod.rs  view.rs
crates/ublx-web/src/viewer/: bodies.rs  csv.rs  mod.rs
crates/ublx-web/styles/: base.css  command_mode.css  help.css  kv_tables.css  panes.css  shell.css  space_menu.css  tailwind-input.css  toast.css  tokens.css  viewer.css
docs/: ROADMAP.md  TUI_STRUCTURE.md  WEB_UI.md
scripts/: profile-viewer-rss.sh
src/: cli_parser.rs  lib.rs  main.rs
src/app/: params.rs
src/app/runtime/: frame.rs  tick.rs
src/cli/: README.md  catalog.rs  catalog_read.rs  doctor.rs  mod.rs  output.rs  query.rs  remote.rs  serve.rs  settings_api.rs
src/cli/serve/: catalog.rs  error.rs  export.rs  fs.rs  lenses_mut.rs  mod.rs  roots.rs  settings.rs  snapshot.rs  state.rs  web_embed.rs
src/cli/serve/content/: html.rs  media.rs  mod.rs  paths.rs  window.rs
src/config/: command_mode.rs  mod.rs  opts.rs  paths.rs  tests.rs  validation.rs
src/config/paths/: dirs.rs  mod.rs  names.rs  recents.rs  ublx_paths.rs
src/config/profile/: core.rs  io.rs
src/engine/: mod.rs  tests.rs
src/engine/db_ops/: mod.rs  tests.rs
src/handlers/: core.rs
src/handlers/viewing/: async_ops.rs  core.rs
src/layout/: setup.rs
src/layout/setup/: mod.rs  modes.rs  overlays.rs  panels.rs  session.rs  settings.rs  ublx_state.rs  view.rs  viewer.rs
src/modules/: file_ops.rs  lenses.rs  ublx_switch.rs
src/modules/settings/: command_mode_leader_row.rs  context.rs  layout_edit.rs  mod.rs  sync.rs  tab.rs  tests.rs  typed_column_tables_row.rs
src/render/: core.rs  mod.rs  path_lines.rs  viewer_cache.rs
src/render/kv_tables/: README.md  column_metadata.rs  draw.rs  export.rs  mod.rs  parse_ctx.rs  schema.rs  sections.rs  tabular.rs  tests.rs  walk.rs
src/render/overlays/: help.rs  theme_selector.rs
src/render/overlays/popup/: menus.rs
src/render/panes/: settings_mode.rs
src/render/panes/right/: content.rs
src/render/viewers/: async_tools.rs  csv_handler.rs  html_escape.rs  mod.rs  svg_preview.rs  syntect_text.rs  tests.rs
src/render/viewers/images/: core.rs  raster_policy.rs
src/themes/: README.md  color_utils.rs  css.rs  mod.rs  palettes.rs  syntect.rs
src/ui/: ctrl_chord.rs  input.rs  mod.rs  mouse.rs  tests.rs
src/ui/consts/: glyph.rs  strings.rs
src/utils/: external_tools.rs  mod.rs  notifications.rs  path.rs  performance_tests.rs  tests.rs  tet_info.rs  tools.rs
tests/: config.rs  kv_tables.rs  performance.rs  viewers.rs
tests/suite/: integration.rs  mod.rs
