[workspace]
members = [".", "crates/ublx-web"]
default-members = ["."]
resolver = "2"

[package]
name = "ublx"
version = "0.2.1"
edition = "2024"
rust-version = "1.95"
authors = ["AHurowitz <latkaindustries@gmail.com>"]
description = "TUI to index once, enrich with metadata, and browse a flat snapshot in a 3-pane layout with multiple modes."
license = "MIT or Apache-2.0"
repository = "https://github.com/Latka-Industries/UBLX"
homepage = "https://ublx.dev/"
documentation = "https://docs.rs/ublx"
readme = "README.md"
keywords = ["tui", "cli", "file-manager", "file-browser"]
categories = [
  "command-line-utilities",
  "database",
  "development-tools",
  "text-processing",
  "visualization",
]
# Force-include gitignored `assets/web-ui/` (filled by build.sh) in the crates.io
# tarball so `cargo install ublx --features ui` can rust-embed the SPA.
include = [
  "/src/**",
  "/tests/**",
  "/docs/**",
  "/assets/**",
  "/Formula/**",
  "/.github/**",
  "/.vscode/**",
  "/build.rs",
  "/Cargo.toml",
  "/Cargo.lock",
  "/README.md",
  "/LICENSE-MIT",
  "/LICENSE-APACHE",
  "/cspell.json",
  "/.mise.toml",
  "/.ublx.toml",
  "/.gitignore",
]
# THI-171: one integration crate (`tests/suite`), not one target per `tests/*.rs`.
autotests = false

[[test]]
name = "suite"
path = "tests/suite/mod.rs"

# rustdoc: `zahirscan` with default features off (no `netcdf`).
[package.metadata.docs.rs]
no-default-features = true

[features]
default = ["zahir-netcdf"]
zahir-netcdf = ["zahirscan/netcdf"]
# Embedded Leptos UI for `ublx serve`. Host rust-embeds `assets/web-ui/`
# (synced from `crates/ublx-web/dist/` by build.sh). crates.io tarball includes
# those assets so `cargo install ublx --features ui` works. Set `UBLX_WEB_DIST`
# for Dir mount (mise `web` loop). `ublx-web` stays publish = false / WASM-only.
ui = ["dep:rust-embed"]

[dependencies]
anyhow = "1.0.104"
axum = "0.8"
blake3 = "1.8.5"
chrono = "0.4"
clap = { version = "4.6.1", features = ["derive", "env"] }
colored = "3.1.1"
comfy-table = "7.2.2"
crossterm = "0.29"
csv = "1.4.0"
env_logger = "0.11.9"
fuzzy-matcher = "0.3.7"
image = "0.25"
lofty = "0.24.0"
log = "0.4.31"
nefaxer = "0.1.12"
notify = "8.2.0"
panza = "0.1.1"
pulldown-cmark = "0.13.3"
rust-embed = { version = "8", optional = true, features = ["debug-embed"] }
ratatui = "0.30"
ratatui-image = { version = "11.0.3", default-features = false, features = [
  "crossterm",
  "image-defaults",
] }
ratatui-notifications = "0.1.0"
rayon = "1.12.0"
rusqlite = { version = "0.39.0", features = ["bundled-sqlcipher"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
sublime-syntaxes = "0.2.0"
syntect = "5.3.0"
tokio = { version = "1.52.2", features = ["rt-multi-thread", "sync"] }
tetration = { version = "0.1.9", default-features = false }
toml = "1.1.2"
ureq = { version = "3.3.0", features = ["json"] }
tui-logger = { version = "0.18.2", features = ["crossterm"] }
unicode-width = "0.2"
zahirscan = { version = "0.3.6", default-features = false }
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }

[patch.crates-io]
# zahirscan = { path = "../zahirscan" }
# nefaxer = { path = "../nefaxer" }
# panza = { path = "../panza" }

[dev-dependencies]
anyhow = "1.0.104"
log = "0.4.29"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
