[package]
name = "ublx-web"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
publish = false
description = "Embedded Leptos catalog UI for `ublx serve` (feature `ui` / THI-157)."
license = "MIT or Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# Host-only: rust-embed `dist/` → `embedded_assets()` for panza `StaticMount::Embedded`.
embed = ["dep:rust-embed"]

[dependencies]
rust-embed = { version = "8", optional = true, features = ["debug-embed"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
gloo-net = { version = "0.6", features = ["http"] }
js-sys = "0.3"
urlencoding = "2"
leptos = { version = "0.8", features = ["csr"] }
leptos-style = "0.2"
leptos-shadcn-ui = { version = "0.9", default-features = false, features = [
  "button",
  "badge",
  "card",
  "separator",
  "tooltip",
  "toast",
] }
# leptos-shadcn-toast → uuid; need `js` RNG on wasm32-unknown-unknown.
uuid = { version = "1", features = ["js"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
  "Clipboard",
  "CssStyleDeclaration",
  "Document",
  "DomTokenList",
  "Element",
  "Event",
  "HtmlCollection",
  "HtmlDetailsElement",
  "HtmlElement",
  "HtmlDivElement",
  "HtmlImageElement",
  "HtmlInputElement",
  "HtmlTextAreaElement",
  "HtmlTableElement",
  "HtmlTableRowElement",
  "History",
  "KeyboardEvent",
  "Location",
  "MouseEvent",
  "Navigator",
  "Node",
  "NodeList",
  "ScrollIntoViewOptions",
  "ScrollLogicalPosition",
  "Text",
  "WheelEvent",
  "Window",
] }
fuzzy-matcher = "0.3.7"
